sticky mobile nav, add spacing to map, fix spacing. create dynamic nav wrapper

--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 60vw;
   margin: auto;
-  margin-top: 1.5rem;
+  margin-top: 10rem;
 }
 
 .cardTitleContainer {
@@ -30,6 +30,6 @@
     width: 80vw;
   }
   .title {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
