--- a/src/components/changeViewMenu.module.css
+++ b/src/components/changeViewMenu.module.css
@@ -14,6 +14,8 @@
     margin: 0;
     bottom: 0;
     z-index: 1000;
+    background: inherit;
+    width: 100%;
   }
   .button {
     margin: 0.5rem 0.5rem;
